--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ header > h1 {
 /* Journal Entry */
 .journal-entry {
   display: flex;
-  margin-bottom: 3rem;
+  margin: 3rem;
   padding-bottom: 2rem;
   border-bottom: 1px solid #f0f0f0;
 }
